syntax = "proto3";

package pb;

import "user.proto";

option go_package = "user-service/pb";

message ResetPasswordRequest{
    string reset_token = 1;
    string password =2;
}

message ResetPasswordResponse{
    string message = 1;
    User user = 2;
}